# miniserve

./: Cargo.toml  README.md
site/: cv.md  index.md
site/Posts/: Setting_Up_Miniserve.md
site/posts/: first-post.md  setting-up-miniserve.md
src/: error.html  http.rs  index.html  index.md  main.rs  md_parser.rs  renderer.rs  router.rs  server.rs  site.rs  style.css
src/pub/: index.md
