[package]
name = "miniserve"
version = "0.1.0"
description = "A lightweight markdown webserver"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
markdown = "1.0.0-alpha.11"
serde = { version = "1.0", features = ["derive"] }
